2002-03-02  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/names/dns.py: Fixed bugs in DNS client

2002-03-01  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/protocols/dns.py: Can now correctly serialize answers

	* twisted/names/dns.py: Can now do simple serving of domains

	* twisted/internet/stupid.py: Removed spurious debugging print

2002-02-28  Chris Armstrong  <carmstro@twistedmatrix.com>

	* .: Releasing 0.15.3.

2002-02-27  Itamar Shtull-Trauring  <itamarst@twistedmatrix.com>

	* twisted/mail/*, twisted/plugins.tml: The Mail server is now
	COILable.

	* bin/twistd: security fix: use a secure umask (077, rather than 0)
	for twistd.pid.

2002-02-26  Allen Short  <washort@twistedmatrix.com>

	* twisted/eco/eco.py, twisted/eco/sexpy.py: ECO now supports
	backquoting and macros.

2002-02-26  Itamar Shtull-Trauring  <itamarst@twistedmatrix.com>

	* twisted/protocols/ftp.py, twisted/plugins.tml: Made the FTP
	server COILable!

2002-02-26  Benjamin Bruheim  <phed@twistedmatrix.com>

	* twisted/web/distrib.py: Fixed a win32-compatibility bug.

2002-02-24  Itamar Shtull-Trauring  <itamarst@twistedmatrix.com>

	* twisted/protocols/socks.py: Made SOCKSv4 coilable, and fixed a 
	bug so it'd work with Mozilla.

2002-02-24  Chris Armstrong  <carmstro@twistedmatrix.com>

	* .: Releasing Twisted 0.15.2.

2002-02-24  Itamar Shtull-Trauring  <itamarst@twistedmatrix.com>

	* setup.py: Added plugins.tml and instancemessenger.glade installs
	so mktap and t-im work in a 'setup.py install' install.

	* debian/rules: Install plugins.tml so mktap works in debian installs.

	* doc/man/mktap.1, twistd.1: Updated the man pages to be more accurate.

2002-02-24  Chris Armstrong  <carmstro@twistedmatrix.com>

	* bin/mktap: Better error reporting when we don't find
	the plugins files.

	* bin/twistd: Print out the *real* usage description rather than
	barfing when we get bad command line arguments.

2002-02-24  Moshe Zadka  <moshez@twistedmatrix.com>
