@@ -21,12 +21,13 @@ Copyright information for Twisted.
 """
 
 
-version="0.15.3"
+version="0.15.4"
 longversion="Twisted %s" % version
+copyright="Copyright (c) 2000-2002 Matthew William Lefkowitz, all rights reserved."
 
 disclaimer="""
 Twisted, the Framework of Your Internet
-Copyright (C) 2001 Matthew W. Lefkowitz
+%s
 
 This library is free software; you can redistribute it and/or
 modify it under the terms of version 2.1 of the GNU Lesser General Public
@@ -40,8 +41,8 @@ Lesser General Public License for more details.
 You should have received a copy of the GNU Lesser General Public
 License along with this library; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
-""" 
+""" % copyright
 
-copyright="(c) 2000 Matthew William Lefkowitz, all rights reserved."
+
 
 
