@@ -1,8 +1,14 @@
-2002-03-02  Moshe Zadka <moshez@twistedmatrix.com>
+2002-03-02  Paul Shwartz  <z3p@twistedmatrix.com>
+
+	* twisted/words/ircservice.py: Send End-Of-MOTD message --
+	some clients rely on this for automatic joining of channels
+	and whatnot.
+
+2002-03-02  Moshe Zadka  <moshez@twistedmatrix.com>
 
 	* twisted/names/dns.py: Fixed bugs in DNS client
 
-2002-03-01  Moshe Zadka <moshez@twistedmatrix.com>
+2002-03-01  Moshe Zadka  <moshez@twistedmatrix.com>
 
 	* twisted/protocols/dns.py: Can now correctly serialize answers
 
